Practice HTML Tags

--- a/Milestone-01/Module-01/index.html
+++ b/Milestone-01/Module-01/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Explore HTML</title>
-</head>
-<body>
-  <p>Lorem <i>ipsum</i>dolor sit amet, <b>consectetur adipisicing elit</b>. Nemo temporibus dolore quidem omnis vel, modi dolorem sed <em> voluptatum quam</em> sapiente eaque corrupti? <strong> Necessitatibus</strong> iste nisi debitis vel ducimus libero qui.</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Explore HTML</title>
+  </head>
+  <body>
+    <p>
+      Lorem <i>ipsum</i>dolor sit amet, <b>consectetur adipisicing elit</b>.
+      Nemo temporibus dolore quidem omnis vel, modi dolorem sed
+      <em> voluptatum quam</em> sapiente eaque corrupti?
+      <strong> Necessitatibus</strong> iste nisi debitis vel ducimus libero qui.
+    </p>
 
+    <h1>Prime Minister</h1>
+    <h2>Minister</h2>
+    <h3>Minister of Parliament</h3>
+    <h4>Chairman or Meyor</h4>
+    <h5>Member</h5>
+    <h6>Mango People</h6>
 
-</body>
+    <div>
+      <h2>This is an UnOrder List</h2>
+      <ul>
+        <li>Zira Gura</li>
+        <li>Holud Gura</li>
+        <li>Morich Gura</li>
+        <li>Dhunia Gura</li>
+      </ul>
+    </div>
+
+    <div>
+      <h2>This is an Order List</h2>
+      <ol>
+        <li>Opu</li>
+        <li>Salman</li>
+        <li>Jannat</li>
+        <li>Tusar</li>
+      </ol>
+    </div>
+  </body>
 </html>
