--- a/Milestone-01/Module-01/index.html
+++ b/Milestone-01/Module-01/index.html
@@ -39,5 +39,10 @@
         <li>Tusar</li>
       </ol>
     </div>
+
+    <div>
+      <h2>Anchor Tag</h2>
+      <a href="https://google.com" target="_blank">Google</a>
+    </div>
   </body>
 </html>
