Exploring form tag

--- a/Milestone-01/Module-01/index.html
+++ b/Milestone-01/Module-01/index.html
@@ -43,6 +43,25 @@
     <div>
       <h2>Anchor Tag</h2>
       <a href="https://google.com" target="_blank">Google</a>
+      <br>
+      <button>Google</button>
+    </div>
+
+    <div>
+      <h2>New Login Form</h2>
+      <form>
+        <label for="fName">First Name: </label><br>
+        <input type="text" id="fName"><br>
+        <label for="lName">Last Name: </label><br>
+        <input type="text" id="lName">
+        <br><br>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+
+    <div>
+      <h2>Image Tag</h2>
+      <img src="https://my-live-01.slatic.net/p/87a177eee5d5f21283b3e51d14a9daac.png" alt="This Rappo Mouse">
     </div>
   </body>
 </html>
