So fat the last update

--- a/Milestone-01/Module-01/task.html
+++ b/Milestone-01/Module-01/task.html
@@ -11,6 +11,12 @@
     />
     <!-- Website Title -->
     <title>MY Travel Blog</title>
+
+    <style>
+      p{
+        color: blue;
+      }
+    </style>
   </head>
   <body>
     <h1><em>My Travel Blog</em></h1>
