--- a/Milestone-01/Module-02/index.html
+++ b/Milestone-01/Module-02/index.html
@@ -31,6 +31,7 @@
       </nav>
     </header>
     <main>
+      <!-- Hero Section -->
       <div class="hero__section">
         <div class="container">
           <div class="hero__content">
@@ -40,6 +41,120 @@
               class="hero__thumbnail"
             />
             <h2 class="hero__Thumb-text">Le Catering</h2>
+          </div>
+        </div>
+      </div>
+
+      <!-- About Catering -->
+      <div class="about__section">
+        <div class="container">
+          <div class="about__content">
+            <div class="about__thumb-wrap">
+              <img
+                src="./images/tablesetting.jpg"
+                alt="About image"
+                class="thumb__img"
+              />
+            </div>
+            <div class="about__text-wrap">
+              <h2 class="about__title">About Catering</h2>
+              <span class="about__subtitle">Tradition since 1889</span>
+              <p class="about__para para--one">
+                The Catering was founded in blabla by Mr. Smith in lorem ipsum
+                dolor sit amet, consectetur adipiscing elit consectetur
+                adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute iruredolor in reprehenderit in voluptate
+                velit esse cillum dolore eu fugiat nulla pariatur.We only use
+                seasonal ingredients.
+              </p>
+              <p class="about__para para--two">
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa
+                qui officia deserunt mollit anim id est laborum consectetur
+                adipiscing elit, sed do eiusmod temporincididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Our Menu -->
+      <div class="menu__section">
+        <div class="container">
+          <div class="menu__content">
+            <div class="menu__text-wrap">
+              <h2 class="text__title">Our Menu</h2>
+              <div class="menu__item">
+                <h3 class="menu__item-title">Bread Basket</h3>
+                <span class="menu__item-subtitle">
+                  Assortment of fresh baked fruit breads and muffins 5.50
+                </span>
+              </div>
+              <div class="menu__item">
+                <h3 class="menu__item-title">
+                  Honey Almond Granola with Fruits
+                </h3>
+                <span class="menu__item-subtitle">
+                  Natural cereal of honey toasted oats, raisins, almonds and
+                  dates 7.00
+                </span>
+              </div>
+              <div class="menu__item">
+                <h3 class="menu__item-title">Belgian Waffle</h3>
+                <span class="menu__item-subtitle">
+                  Vanilla flavored batter with malted flour 7.50
+                </span>
+              </div>
+              <div class="menu__item">
+                <h3 class="menu__item-title">Bread Basket</h3>
+                <span class="menu__item-subtitle">
+                  Assortment of fresh baked fruit breads and muffins 5.50
+                </span>
+              </div>
+              <div class="menu__item">
+                <h3 class="menu__item-title">Bread Basket</h3>
+                <span class="menu__item-subtitle">
+                  Assortment of fresh baked fruit breads and muffins 5.50
+                </span>
+              </div>
+            </div>
+            <div class="menu__thumb-wrap">
+              <img src="./images/tablesetting2.jpg" alt="Menu thumb images" class="menu__thumb-img">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Contact Section -->
+      <div class="contact__section">
+        <div class="container">
+          <div class="contact__content">
+            <h2 class="contact__title">Contact</h2>
+            <p class="contact__para">We offer full-service catering for any event, large or small. We understand your needs and we will cater the food to satisfy the biggerst criteria of them all, both look and taste. Do not hesitate to contact us.</p>
+            <span class="contact__address">Catering Service, 42nd Living St, 43043 New York, NY</span>
+            <span class="contact__address-another">You can also contact us by phone 00553123-2323 or email catering@catering.com, or you can send us a message here:</span>
+
+            <form action="#" class="contact__form">
+              <div class="form__group">
+                <input type="text" class="form__input">
+              </div>
+              <div class="form__group">
+                <input type="number" class="form__input">
+              </div>
+              <div class="form__group">
+                <input type="datetime-local" class="form__input">
+              </div>
+              <div class="form__group">
+                <input type="text" class="form__input">
+              </div>
+              <div class="form__submit">
+                <input type="submit" value="Send Message">
+              </div>
+            </form>
           </div>
         </div>
       </div>
