NAvigation area done

--- a/Milestone-01/Module-02/index.html
+++ b/Milestone-01/Module-02/index.html
@@ -14,7 +14,7 @@
     <!-- Header or Navigation -->
     <header>
       <nav class="nav">
-        <div class="brand"></div>
+        <a href="#" class="brand">Gourmet au Catering</a>
         <div class="nav__item-wrap">
           <ul class="nav__items">
             <li class="nav__item">
@@ -123,7 +123,11 @@
               </div>
             </div>
             <div class="menu__thumb-wrap">
-              <img src="./images/tablesetting2.jpg" alt="Menu thumb images" class="menu__thumb-img">
+              <img
+                src="./images/tablesetting2.jpg"
+                alt="Menu thumb images"
+                class="menu__thumb-img"
+              />
             </div>
           </div>
         </div>
@@ -134,31 +138,46 @@
         <div class="container">
           <div class="contact__content">
             <h2 class="contact__title">Contact</h2>
-            <p class="contact__para">We offer full-service catering for any event, large or small. We understand your needs and we will cater the food to satisfy the biggerst criteria of them all, both look and taste. Do not hesitate to contact us.</p>
-            <span class="contact__address">Catering Service, 42nd Living St, 43043 New York, NY</span>
-            <span class="contact__address-another">You can also contact us by phone 00553123-2323 or email catering@catering.com, or you can send us a message here:</span>
+            <p class="contact__para">
+              We offer full-service catering for any event, large or small. We
+              understand your needs and we will cater the food to satisfy the
+              biggerst criteria of them all, both look and taste. Do not
+              hesitate to contact us.
+            </p>
+            <span class="contact__address"
+              >Catering Service, 42nd Living St, 43043 New York, NY</span
+            >
+            <span class="contact__address-another"
+              >You can also contact us by phone 00553123-2323 or email
+              catering@catering.com, or you can send us a message here:</span
+            >
 
             <form action="#" class="contact__form">
               <div class="form__group">
-                <input type="text" class="form__input">
+                <input type="text" class="form__input" />
               </div>
               <div class="form__group">
-                <input type="number" class="form__input">
+                <input type="number" class="form__input" />
               </div>
               <div class="form__group">
-                <input type="datetime-local" class="form__input">
+                <input type="datetime-local" class="form__input" />
               </div>
               <div class="form__group">
-                <input type="text" class="form__input">
+                <input type="text" class="form__input" />
               </div>
               <div class="form__submit">
-                <input type="submit" value="Send Message">
+                <input type="submit" value="Send Message" />
               </div>
             </form>
           </div>
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <p class="footer__text">
+        Powered by
+        <a href="https://tusar.netlify.app/" target="_blank">TUSAR</a>
+      </p>
+    </footer>
   </body>
 </html>
