--- a/Milestone-01/Module-02/index.html
+++ b/Milestone-01/Module-02/index.html
@@ -32,8 +32,8 @@
     </header>
     <main>
       <!-- Hero Section -->
-      <div class="hero__section">
-        <div class="container">
+      <div class="hero__section section">
+        <div class="container w-1440">
           <div class="hero__content">
             <img
               src="./images/hamburger.jpg"
