About section done

--- a/Milestone-01/Module-02/index.html
+++ b/Milestone-01/Module-02/index.html
@@ -40,18 +40,18 @@
               alt="Hero Burger Thumbnail"
               class="hero__thumbnail"
             />
-            <h2 class="hero__Thumb-text">Le Catering</h2>
+            <h2 class="hero__thumb-text">Le Catering</h2>
           </div>
         </div>
       </div>
 
       <!-- About Catering -->
-      <div class="about__section">
+      <div class="about__section section">
         <div class="container">
           <div class="about__content">
             <div class="about__thumb-wrap">
               <img
-                src="./images/tablesetting.jpg"
+                src="./images/tablesetting2.jpg"
                 alt="About image"
                 class="thumb__img"
               />
@@ -124,7 +124,7 @@
             </div>
             <div class="menu__thumb-wrap">
               <img
-                src="./images/tablesetting2.jpg"
+                src="./images/tablesetting.jpg"
                 alt="Menu thumb images"
                 class="menu__thumb-img"
               />
