Practice download for anchor tag

--- a/Milestone-01/Module-01/index.html
+++ b/Milestone-01/Module-01/index.html
@@ -62,7 +62,7 @@
     <div>
       <h2>Image Tag</h2>
       <img src="https://my-live-01.slatic.net/p/87a177eee5d5f21283b3e51d14a9daac.png"  alt="This Rappo Mouse">
-      <a href="https://my-live-01.slatic.net/p/87a177eee5d5f21283b3e51d14a9daac.png" download>download</a>
+      <a href="./images/Contract Law.pdf" download>download Contract Law</a>
     </div>
   </body>
 </html>
