Practicing also video tag

--- a/Milestone-01/Module-03/index.html
+++ b/Milestone-01/Module-03/index.html
@@ -10,6 +10,13 @@
 <body>
   <!-- Explore Audio and Video Tag -->
   <audio controls src="./assets/media/town-10169.mp3"></audio>
+
+  <video controls width="350">
+    <source src="./assets/media/production_id_4114797 (2160p).mp4">
+
+    Download The video
+    <a href="./assets/media/production_id_4114797 (2160p).mp4" download="">Download mp4</a>
+  </video>
   
 </body>
 </html>
