So far last update

--- a/Milestone-02/Module-07/index.html
+++ b/Milestone-02/Module-07/index.html
@@ -3,9 +3,95 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Responsive Layout</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="flower">
+      <img src="./flower_drawing.png" alt="">
+      <h3>Food Item - 1</h3>
+      <p>Price - $100</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ea saepe delectus officia libero qui? Rem enim dolores impedit libero?</p>
+      <button>By Now</button>
+    </div>
+    <div class="flower">
+      <img src="./flower_drawing.png" alt="">
+      <h3>Food Item - 2</h3>
+      <p>Price - $200</p>
+      <p>Distinctio alias nostrum molestias doloremque accusantium incidunt quia consequuntur, doloribus aperiam eum. Sunt odio eum aperiam voluptatibus natus eligendi sint.</p>
+      <button>By Now</button>
+    </div>
+    <div class="flower">
+      <img src="./flower_drawing.png" alt="">
+      <h3>Food Item - 3</h3>
+      <p>Price - $300</p>
+      <p>Quo minima recusandae praesentium porro totam ducimus! Nam omnis eligendi quas veniam ducimus, iusto repellat, quis dolor optio aspernatur vitae.</p>
+      <button>By Now</button>
+    </div>
+    <div class="flower">
+      <img src="./flower_drawing.png" alt="">
+      <h3>Food Item - 4</h3>
+      <p>Price - $400</p>
+      <p>Saepe adipisci ad ea, ullam recusandae labore aspernatur necessitatibus! Dignissimos fuga cupiditate voluptates sapiente, corrupti tempore impedit inventore sit provident?</p>
+      <button>By Now</button>
+    </div>
+    <div class="flower">
+      <img src="./flower_drawing.png" alt="">
+      <h3>Food Item - 5</h3>
+      <p>Price - $500</p>
+      <p>Impedit laudantium expedita blanditiis ipsa voluptatem modi rerum atque velit distinctio a ad iusto, suscipit culpa aperiam dignissimos quos. Non?</p>
+      <button>By Now</button>
+    </div>
+    <div class="flower">
+      <img src="./flower_drawing.png" alt="">
+      <h3>Food Item - 6</h3>
+      <p>Price - $600</p>
+      <p>Nemo corporis eos dolores dicta totam sed, nam similique iusto! Ratione dolore ipsam eos voluptatem commodi in, laborum repellat assumenda!</p>
+      <button>By Now</button>
+    </div>
+    <div class="flower">
+      <img src="./flower_drawing.png" alt="">
+      <h3>Food Item - 7</h3>
+      <p>Price - $700</p>
+      <p>Eos, officia? Ducimus ipsum dolorum quam dicta iure tenetur nam quos quisquam nihil optio, hic accusamus omnis, amet placeat alias.</p>
+      <button>By Now</button>
+    </div>
+    <div class="flower">
+      <img src="./flower_drawing.png" alt="">
+      <h3>Food Item - 8</h3>
+      <p>Price - $800</p>
+      <p>Culpa maiores praesentium necessitatibus est ex ea reprehenderit saepe obcaecati cum. Aliquid facere asperiores, nihil officiis beatae quis laborum possimus.</p>
+      <button>By Now</button>
+    </div>
+    <div class="flower">
+      <img src="./flower_drawing.png" alt="">
+      <h3>Food Item - 9</h3>
+      <p>Price - $900</p>
+      <p>Facilis aliquid eligendi possimus dolorum accusantium, soluta tempore quibusdam iste. Ut dolore iure aliquam. Possimus non consequatur deleniti pariatur et?</p>
+      <button>By Now</button>
+    </div>
+    <div class="flower">
+      <img src="./flower_drawing.png" alt="">
+      <h3>Food Item - 10</h3>
+      <p>Price - $1000</p>
+      <p>Corporis praesentium laboriosam minima voluptatum modi amet esse aliquam non est illo ut incidunt ipsum placeat, voluptate delectus sit totam.</p>
+      <button>By Now</button>
+    </div>
+    <div class="flower">
+      <img src="./flower_drawing.png" alt="">
+      <h3>Food Item - 11</h3>
+      <p>Price - $1100</p>
+      <p>Laudantium dolores ea eius non cum ad natus at expedita necessitatibus temporibus vitae, neque reprehenderit sed hic nobis nostrum dolore!</p>
+      <button>By Now</button>
+    </div>
+    <div class="flower">
+      <img src="./flower_drawing.png" alt="">
+      <h3>Food Item - 12</h3>
+      <p>Price - $1200</p>
+      <p>Omnis, accusamus ratione odio saepe deleniti consectetur sapiente libero eveniet laudantium, enim, perferendis nobis perspiciatis est accusantium modi officia ipsam.</p>
+      <button>By Now</button>
+    </div>
+  </div>
 </body>
 </html>
