--- a/Milestone-03/index.html
+++ b/Milestone-03/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.tailwindcss.com"></script>
   <title>Tailwind</title>
 </head>
 <body>
-  
+  <h1 class="bg-red-500">Lorem ipsum dolor sit amet.</h1>
+  <h3 class="text-green-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dignissimos consequatur officia necessitatibus totam, quisquam libero porro? Libero modi voluptatum cumque repellat ducimus. Fugiat, eius ea quam veritatis cumque mollitia?</h3>
 </body>
 </html>
