So far last update

--- a/Milestone-04/Moduel-16/index.html
+++ b/Milestone-04/Moduel-16/index.html
@@ -6,7 +6,7 @@
   <title>JAvaScript</title>
 </head>
 <body>
-  
+  <input class="inputTk" type="text">
 
   <script src="./app.js"></script>
 </body>
