Practice problem two is done

--- a/Milestone-04/JavaScript_Problem/index.html
+++ b/Milestone-04/JavaScript_Problem/index.html
@@ -8,6 +8,7 @@
 <body>
   
 
-  <script src="./problem_01.js"></script>
+  <!-- <script src="./problem_01.js"></script> -->
+  <script src="./problem_02.js"></script>
 </body>
 </html>
