--- a/Milestone-04/JavaScript_Problem/index.html
+++ b/Milestone-04/JavaScript_Problem/index.html
@@ -9,6 +9,7 @@
   
 
   <!-- <script src="./problem_01.js"></script> -->
-  <script src="./problem_02.js"></script>
+  <!-- <script src="./problem_02.js"></script> -->
+  <script src="./problem_03.js"></script>
 </body>
 </html>
