--- a/Milestone-04/JavaScript_Problem/index.html
+++ b/Milestone-04/JavaScript_Problem/index.html
@@ -10,6 +10,7 @@
 
   <!-- <script src="./problem_01.js"></script> -->
   <!-- <script src="./problem_02.js"></script> -->
-  <script src="./problem_03.js"></script>
+  <!-- <script src="./problem_03.js"></script> -->
+  <script src="./problem_04.js"></script>
 </body>
 </html>
