--- a/Milestone-04/JavaScript_Problem/index.html
+++ b/Milestone-04/JavaScript_Problem/index.html
@@ -12,6 +12,7 @@
   <!-- <script src="./problem_02.js"></script> -->
   <!-- <script src="./problem_03.js"></script> -->
   <!-- <script src="./problem_04.js"></script> -->
-  <script src="./problem_05.js"></script>
+  <!-- <script src="./problem_05.js"></script> -->
+  <script src="./randomProblem.js"></script>
 </body>
 </html>
