Leap year program done

--- a/Milestone-04/JavaScript_Problem/index.html
+++ b/Milestone-04/JavaScript_Problem/index.html
@@ -13,6 +13,7 @@
   <!-- <script src="./problem_03.js"></script> -->
   <!-- <script src="./problem_04.js"></script> -->
   <!-- <script src="./problem_05.js"></script> -->
-  <script src="./randomProblem.js"></script>
+  <!-- <script src="./randomProblem.js"></script> -->
+  <script src="./leapYear.js"></script>
 </body>
 </html>
