Hour to minute converted done

--- a/Milestone-04/JavaScript_Problem/index.html
+++ b/Milestone-04/JavaScript_Problem/index.html
@@ -15,6 +15,7 @@
   <!-- <script src="./problem_05.js"></script> -->
   <!-- <script src="./randomProblem.js"></script> -->
   <!-- <script src="./leapYear.js"></script> -->
-  <script src="./ageEvenOdd.js"></script>
+  <!-- <script src="./ageEvenOdd.js"></script> -->
+  <script src="./hourToMinute.js"></script>
 </body>
 </html>
