So far last update

--- a/Milestone-04/JavaScript_Problem/index.html
+++ b/Milestone-04/JavaScript_Problem/index.html
@@ -16,6 +16,6 @@
   <!-- <script src="./randomProblem.js"></script> -->
   <!-- <script src="./leapYear.js"></script> -->
   <!-- <script src="./ageEvenOdd.js"></script> -->
-  <script src="./hourToMinute.js"></script>
+  <!-- <script src="./hourToMinute.js"></script> -->
 </body>
 </html>
