--- a/Milestone-04/JavaScript_Problem/index.html
+++ b/Milestone-04/JavaScript_Problem/index.html
@@ -17,5 +17,6 @@
   <!-- <script src="./leapYear.js"></script> -->
   <!-- <script src="./ageEvenOdd.js"></script> -->
   <!-- <script src="./hourToMinute.js"></script> -->
+  <script src="./Loop/problem1.js"></script>
 </body>
 </html>
