Product matched problem done

--- a/Milestone-04/JavaScript_Problem/index.html
+++ b/Milestone-04/JavaScript_Problem/index.html
@@ -18,6 +18,7 @@
   <!-- <script src="./ageEvenOdd.js"></script> -->
   <!-- <script src="./hourToMinute.js"></script> -->
   <!-- <script src="./Loop/problem1.js"></script> -->
-  <script src="./Loop/array.js"></script>
+  <!-- <script src="./Loop/array.js"></script> -->
+  <script src="./dataSearch.js"></script>
 </body>
 </html>
