Feet to inch problem is done

--- a/Milestone-04/JavaScript_Problem/index.html
+++ b/Milestone-04/JavaScript_Problem/index.html
@@ -19,6 +19,7 @@
   <!-- <script src="./hourToMinute.js"></script> -->
   <!-- <script src="./Loop/problem1.js"></script> -->
   <!-- <script src="./Loop/array.js"></script> -->
-  <script src="./dataSearch.js"></script>
+  <!-- <script src="./dataSearch.js"></script> -->
+  <script src="./feetToInch.js"></script>
 </body>
 </html>
