Centemeter to meter function done

--- a/Milestone-04/JavaScript_Problem/index.html
+++ b/Milestone-04/JavaScript_Problem/index.html
@@ -20,6 +20,6 @@
   <!-- <script src="./Loop/problem1.js"></script> -->
   <!-- <script src="./Loop/array.js"></script> -->
   <!-- <script src="./dataSearch.js"></script> -->
-  <script src="./feetToInch.js"></script>
+  <script src="./practiceProblem.js"></script>
 </body>
 </html>
