--- a/Milestone-05/Dom/index.html
+++ b/Milestone-05/Dom/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>DOM</title>
-</head>
-<body>
-    
+  </head>
+  <body>
+    <section class="hero">
+      <nav>
+        <ul>
+          <li>
+            <a href="#">Home and Service</a>
+          </li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </section>
+    <div class="box">
+      <p>Text One</p>
+      <p>Text Two</p>
+      <p>Text Three</p>
+      <p>Text Four</p>
+    </div>
+
+    <button class="myBtn">BG Color For 3 Second</button>
 
     <script src="./assets/app.js"></script>
-</body>
+  </body>
 </html>
