--- a/Milestone-05/Dom/index.html
+++ b/Milestone-05/Dom/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="user" content="Tusar" />
 
     <title>DOM</title>
   </head>
@@ -19,11 +20,16 @@
       </nav>
     </section>
     <div class="box">
-      <p>Text One</p>
-      <p>Text Two</p>
-      <p>Text Three</p>
-      <p>Text Four</p>
     </div>
+
+    <table id="table">
+      <tr>
+        <td>one</td><td>two</td>
+      </tr>
+      <tr>
+        <td>three</td><td>four</td>
+      </tr>
+    </table>
 
     <button class="myBtn">BG Color For 3 Second</button>
 
