Diagonal Table design

--- a/Milestone-05/Dom/index.html
+++ b/Milestone-05/Dom/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="user" content="Tusar" />
 
+    <link rel="stylesheet" href="./assets/css/style.css">
+
     <title>DOM</title>
   </head>
   <body>
@@ -22,17 +24,46 @@
     <div class="box">
     </div>
 
-    <table id="table">
+    <table>
       <tr>
-        <td>one</td><td>two</td>
+        <td>1:1</td>
+        <td>2:1</td>
+        <td>3:1</td>
+        <td>4:1</td>
+        <td>5:1</td>
       </tr>
       <tr>
-        <td>three</td><td>four</td>
+        <td>1:2</td>
+        <td>2:2</td>
+        <td>3:2</td>
+        <td>4:2</td>
+        <td>5:2</td>
+      </tr>
+      <tr>
+        <td>1:3</td>
+        <td>2:3</td>
+        <td>3:3</td>
+        <td>4:3</td>
+        <td>5:3</td>
+      </tr>
+      <tr>
+        <td>1:4</td>
+        <td>2:4</td>
+        <td>3:4</td>
+        <td>4:4</td>
+        <td>5:4</td>
+      </tr>
+      <tr>
+        <td>1:5</td>
+        <td>2:5</td>
+        <td>3:5</td>
+        <td>4:5</td>
+        <td>5:5</td>
       </tr>
     </table>
 
     <button class="myBtn">BG Color For 3 Second</button>
 
-    <script src="./assets/app.js"></script>
+    <script src="./assets/js/app.js"></script>
   </body>
 </html>
