Practice dom navigator

--- a/Milestone-05/Dom/index.html
+++ b/Milestone-05/Dom/index.html
@@ -24,7 +24,7 @@
     <div class="box">
     </div>
 
-    <table>
+    <table id="myTable">
       <tr>
         <td>1:1</td>
         <td>2:1</td>
@@ -61,6 +61,19 @@
         <td>5:5</td>
       </tr>
     </table>
+
+    <br>
+
+    <ul>
+      <li>The</li>
+      <li>test</li>
+    </ul>
+    <ul>
+      <li>has</li>
+      <li>passed</li>
+    </ul>
+
+    <br>
 
     <button class="myBtn">BG Color For 3 Second</button>
 
