Practice dom properties are typed

--- a/Milestone-05/Dom/index.html
+++ b/Milestone-05/Dom/index.html
@@ -77,7 +77,7 @@
 
     <button class="myBtn">BG Color For 3 Second</button> -->
 
-    <form name="search">
+    <!-- <form name="search">
       <label>Search the site:
         <input type="text" name="search">
       </label>
@@ -110,11 +110,30 @@
           </td>
         </tr>
   
-      </table>
-  
-      <input type="submit" value="Search!">
-    </form>
+      </table> -->
 
+
+  
+      <!-- <input type="submit" value="Search!">
+    </form> -->
+
+    <div class="box" id="myElement" name="Tusar" nother="fater">
+      <p>Lorem ipsum dolor sit amet.</p>
+      <p>Neque, molestias.</p>
+      <p>nulla debitis dolores adipisci!</p>
+      <p>Lorem ipsum dolor sit.</p>
+    </div>
+
+    <input type="text" name="first-name">
+
+    <input type="checkbox" checked>
+
+    <a id="a" href="#hello">link</a>
+
+    <div show-info="name"></div>
+    <div show-info="age"></div>
+
+    <div id="elem" about="Elephant"></div>
     <script src="./assets/js/app.js"></script>
   </body>
 </html>
