We see why need to non statnderd attribute

--- a/Milestone-05/Dom/index.html
+++ b/Milestone-05/Dom/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="user" content="Tusar" />
 
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css" />
 
     <title>DOM</title>
   </head>
@@ -112,9 +112,7 @@
   
       </table> -->
 
-
-  
-      <!-- <input type="submit" value="Search!">
+    <!-- <input type="submit" value="Search!">
     </form> -->
 
     <div class="box" id="myElement" name="Tusar" nother="fater">
@@ -124,14 +122,14 @@
       <p>Lorem ipsum dolor sit.</p>
     </div>
 
-    <input type="text" name="first-name">
+    <input type="text" name="first-name" />
 
-    <input type="checkbox" checked>
+    <input type="checkbox" checked />
 
     <a id="a" href="#hello">link</a>
 
-    <div show-info="name"></div>
-    <div show-info="age"></div>
+    <div show-info="name" style="padding: 10px; background: red"></div>
+    <div show-info="age" style="padding: 10px; background: greenyellow"></div>
 
     <div id="elem" about="Elephant"></div>
     <script src="./assets/js/app.js"></script>
