--- a/Milestone-05/Dom/index.html
+++ b/Milestone-05/Dom/index.html
@@ -114,8 +114,8 @@
 
     <!-- <input type="submit" value="Search!">
     </form> -->
-
-    <div class="box" id="myElement" name="Tusar" nother="fater">
+<!-- 
+    <div class="box" id="myElement" name="Tusar" nother="fater" data-tus="Tusar Ali">
       <p>Lorem ipsum dolor sit amet.</p>
       <p>Neque, molestias.</p>
       <p>nulla debitis dolores adipisci!</p>
@@ -131,7 +131,7 @@
     <div show-info="name" style="padding: 10px; background: red"></div>
     <div show-info="age" style="padding: 10px; background: greenyellow"></div>
 
-    <div id="elem" about="Elephant"></div>
+    <div id="elem" about="Elephant"></div> -->
     <script src="./assets/js/app.js"></script>
   </body>
 </html>
