--- a/Milestone-05/Dom/index.html
+++ b/Milestone-05/Dom/index.html
@@ -114,7 +114,7 @@
 
     <!-- <input type="submit" value="Search!">
     </form> -->
-<!-- 
+    <!-- 
     <div class="box" id="myElement" name="Tusar" nother="fater" data-tus="Tusar Ali">
       <p>Lorem ipsum dolor sit amet.</p>
       <p>Neque, molestias.</p>
@@ -132,6 +132,18 @@
     <div show-info="age" style="padding: 10px; background: greenyellow"></div>
 
     <div id="elem" about="Elephant"></div> -->
+
+    <a name="list">the list</a>
+    <ul>
+      <li><a href="http://google.com">http://google.com</a></li>
+      <li><a href="/tutorial">/tutorial.html</a></li>
+      <li><a href="local/path">local/path</a></li>
+      <li><a href="ftp://ftp.com/my.zip">ftp://ftp.com/my.zip</a></li>
+      <li><a href="http://nodejs.org">http://nodejs.org</a></li>
+      <li><a href="http://internal.com/test">http://internal.com/test</a></li>
+    </ul>
+
+    <div data-widget-name="menu">Choose the genre</div>
     <script src="./assets/js/app.js"></script>
   </body>
 </html>
