--- a/Milestone-05/Dom/index.html
+++ b/Milestone-05/Dom/index.html
@@ -133,7 +133,7 @@
 
     <div id="elem" about="Elephant"></div> -->
 
-    <a name="list">the list</a>
+    <!-- <a name="list">the list</a>
     <ul>
       <li><a href="http://google.com">http://google.com</a></li>
       <li><a href="/tutorial">/tutorial.html</a></li>
@@ -143,7 +143,11 @@
       <li><a href="http://internal.com/test">http://internal.com/test</a></li>
     </ul>
 
-    <div data-widget-name="menu">Choose the genre</div>
+    <div data-widget-name="menu">Choose the genre</div> -->
+
+    <!-- <div class="alert">
+      <strong>Hi there!</strong> You've read an important message.
+    </div> -->
     <script src="./assets/js/app.js"></script>
   </body>
 </html>
