Exploring beautiful insertion method

--- a/Milestone-05/Dom/index.html
+++ b/Milestone-05/Dom/index.html
@@ -148,6 +148,14 @@
     <!-- <div class="alert">
       <strong>Hi there!</strong> You've read an important message.
     </div> -->
+
+    <ul id="names">
+      <li>Rakib</li>
+      <li>Sharif</li>
+      <li>Tusar</li>
+      <li>Shuvo</li>
+      <li>Rocky</li>
+    </ul>
     <script src="./assets/js/app.js"></script>
   </body>
 </html>
