--- a/Milestone-05/Dom/index.html
+++ b/Milestone-05/Dom/index.html
@@ -149,13 +149,13 @@
       <strong>Hi there!</strong> You've read an important message.
     </div> -->
 
-    <ul id="names">
+    <!-- <ul id="names">
       <li>Rakib</li>
       <li>Sharif</li>
       <li>Tusar</li>
       <li>Shuvo</li>
       <li>Rocky</li>
-    </ul>
+    </ul> -->
     <script src="./assets/js/app.js"></script>
   </body>
 </html>
