Prepare to special task

--- a/Milestone-05/Dom/index.html
+++ b/Milestone-05/Dom/index.html
@@ -156,6 +156,11 @@
       <li>Shuvo</li>
       <li>Rocky</li>
     </ul> -->
+
+    <ol id="elem">
+      <li>Hello</li>
+      <li>World</li>
+    </ol>
     <script src="./assets/js/app.js"></script>
   </body>
 </html>
