Simple todo using prompt

--- a/Milestone-05/Dom/index.html
+++ b/Milestone-05/Dom/index.html
@@ -157,10 +157,26 @@
       <li>Rocky</li>
     </ul> -->
 
-    <ol id="elem">
+    <!-- <ol id="elem">
       <li>Hello</li>
       <li>World</li>
-    </ol>
+    </ol> -->
+
+    <table id="table">
+      aaa
+      dgh
+      dhfgh
+      <tr>
+        <td>Test</td>
+      </tr>
+
+      dfhfgjhfgsdf
+      gh
+      fgjh
+      dfhfg
+      jfg
+
+    </table>
     <script src="./assets/js/app.js"></script>
   </body>
 </html>
