Confirm delete button

--- a/Milestone-05/confirm-delete/index.html
+++ b/Milestone-05/confirm-delete/index.html
@@ -14,7 +14,7 @@
         </div>
 
         <input type="text" class="delete-box">
-        <button class="delete-btn">Delete</button>
+        <button class="delete-btn" disabled>Delete</button>
       </div>
     </div>
     <script src="./assets/js/app.js"></script>
