Last update to todo list

--- a/Milestone-05/simple-todo/index.html
+++ b/Milestone-05/simple-todo/index.html
@@ -16,6 +16,18 @@
                         <p>Lorem, ipsum dolor.</p>
                         <img class="delete-icon" src="./assets/img/trash.png" alt="Delete Icon">
                     </div>
+                    <div class="todo_item">
+                        <p>I Love JavaScript.</p>
+                        <img class="delete-icon" src="./assets/img/trash.png" alt="Delete Icon">
+                    </div>
+                    <div class="todo_item">
+                        <p>I hate PHP.</p>
+                        <img class="delete-icon" src="./assets/img/trash.png" alt="Delete Icon">
+                    </div>
+                    <div class="todo_item">
+                        <p>Best language is python.</p>
+                        <img class="delete-icon" src="./assets/img/trash.png" alt="Delete Icon">
+                    </div>
                 </div>
             </div>
         </div>
