Bank dashboard design is done

--- a/Milestone-05/Bank/index.html
+++ b/Milestone-05/Bank/index.html
@@ -12,7 +12,7 @@
         <div class="container-fluid w-full max-w-5xl">
             <div class="w-full max-w-80 bg-white rounded shadow px-5 py-8 space-y-4 mx-auto border border-slate-100 outline-none">
                 <h2 class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20">Login Your Accout</h2>
-                <input type="text" id="email-field" class="border px-3 py-1 w-full block">
+                <input type="email" id="email-field" class="border px-3 py-1 w-full block">
                 <input type="password" id="password-field" class="border px-3 py-1 w-full block">
                 <button id="submit-btn" class="bg-white shadow rounded text-black px-8 py-2">Submit</button>
             </div>
