--- a/Milestone-05/Bank/bank.html
+++ b/Milestone-05/Bank/bank.html
@@ -20,13 +20,13 @@
           <div class="bg-fuchsia-600 w-full p-4 rounded-md space-y-3">
             <h2 class="text-white text-lg">Withdraw</h2>
             <h3 class="text-orange-50 text-3xl">
-              $<span id="d-amount">00</span>
+              $<span id="w-amount">00</span>
             </h3>
           </div>
           <div class="bg-yellow-500 w-full p-4 rounded-md space-y-3">
             <h2 class="text-white text-lg">Ammount</h2>
             <h3 class="text-orange-50 text-3xl">
-              $<span id="d-amount">00</span>
+              $<span id="a-amount">1200</span>
             </h3>
           </div>
         </div>
@@ -35,12 +35,12 @@
             <h2 class="text-white text-lg">Please Diposit</h2>
             <input
               type="text"
-              id="diposit-ammount"
+              id="diposit-input"
               class="border px-3 py-2 w-full block rounded"
               placeholder="Enter Ammount"
             />
             <button
-              id="submit-btn"
+              id="diposit-btn"
               class="bg-white shadow rounded text-black px-8 py-2"
             >
               Diposit
@@ -50,12 +50,12 @@
             <h2 class="text-white text-lg">Please Withdraw</h2>
             <input
               type="text"
-              id="diposit-ammount"
+              id="withdraw-input"
               class="border px-3 py-2 w-full block rounded"
               placeholder="Enter Ammount"
             />
             <button
-              id="submit-btn"
+              id="withdraw-btn"
               class="bg-white shadow rounded text-black px-8 py-2"
             >
               Withdraw
