--- a/Milestone-06/Module-31/index.html
+++ b/Milestone-06/Module-31/index.html
@@ -8,6 +8,7 @@
 <body>
     
 
-    <script src="./app.js"></script>
+    <!-- <script src="./app.js"></script> -->
+    <script src="./problem.js"></script>
 </body>
 </html>
