--- a/Milestone-06/Module-32/index.html
+++ b/Milestone-06/Module-32/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Class</title>
+    <title>ES6</title>
 </head>
 <body>
     
 
     <script src="./app.js"></script>
-    <!-- <script src="./problem.js"></script> -->
 </body>
 </html>
