Data fatcing done

--- a/Milestone-06/Module-32/index.html
+++ b/Milestone-06/Module-32/index.html
@@ -6,6 +6,7 @@
     <title>ES6</title>
 </head>
 <body>
+    <button onclick="loadData()">Load Data</button>
     
 
     <script src="./app.js"></script>
