Create new file

--- a/Milestone-06/Module-35/index.html
+++ b/Milestone-06/Module-35/index.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ES6</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-
+    <title>Document</title>
 </head>
 <body>
-    <button class="shadow-md border p-2 rounded-md" onclick="loadData()">Load Data</button>
     
 
     <script src="./app.js"></script>
